test/error/StThrowNoThrows.fu
public static class Test
{
	static void Foo()
	{
		throw Exception("foo"); //ERROR: 'throw' in a method not marked 'throws'
	}

	public static bool Run()
	{
		return true;
	}
}
